<resources>
    <string name="app_name">Кабинет-жителя.рф</string>

    <!--    Base-->
    <string name="web_view_url">https://lk2.eis24.me/</string>
    <string name="logout_url">https://lk2.eis24.me/#/auth/login/</string>
    <string name="tickets">https://lk2.eis24.me/#/tickets/list/</string>
    <string name="requests">https://lk2.eis24.me/#/requests/list/</string>
    <string name="accruals">https://lk2.eis24.me/#/accruals/all/</string>
    <string name="counters">https://lk2.eis24.me/#/meters/</string>
    <string name="news">https://lk2.eis24.me/#/news/list/</string>
    <string name="telegram_bot_url">https://t.me/arseniy_kabinet_bot</string>

    <!--    Auth-->
    <string name="pay_by_qr">Оплата по QR-коду</string>
    <string name="telegram_bot">Телеграм бот</string>
    <string name="dont_have_account">Ещё нет аккаунта?</string>
    <string name="create_account">Создайте аккаунт</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="incorrect_email">Неверный формат почты</string>
    <string name="incorrect_email_or_pass">Неверный логин или пароль</string>
    
    <!-- Sign Up-->
    <string name="sign_up_title">Регистрация личного кабинета</string>
    <string name="account_id">№ лицевого счета</string>
    <string name="specified_in_receipt">Указан в квитанции квартплаты</string>
    <string name="example_email">example@mail.ru</string>
    <string name="receipt_hint">4353453535345</string>
    <string name="host_second_name">Фамилия собственника</string>
    <string name="future_login">Будущий логин</string>
    <string name="second_name_hint">Иванов</string>
    <string name="email_hint_example">IvanoV1988@gmail.com</string>
    <string name="sign_up">Регистрация</string>
    <string name="cancel">Отмена</string>
    <string name="close">Закрыть</string>
    <string name="letter_with_insctutions_send">На Вашу почту отправлено письмо с инструкцией об активации личного кабинета</string>

    <!-- Recovery-->
    <string name="forget_password">Забыли пароль?</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="password_recovery_success">На Вашу почту отправлено письмо с инструкцией о восстановлении пароля</string>

    <!-- QRCode-->
    <string name="camera_permission_required">Для сканирования требуется доступ к камере</string>

</resources>