<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up_title"
        android:textColor="@color/custom_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/account_number_text_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_rounded_background_text_input"
        android:ems="10"
        android:hint="@string/receipt_hint"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/host_name_text_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_rounded_background_text_input"
        android:ems="10"
        android:hint="@string/second_name_hint"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_number_text_input" />

    <EditText
        android:id="@+id/email_text_input_registration"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_rounded_background_text_input"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host_name_text_input" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_blue_rounded_background"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@null"
        android:text="@string/cancel"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/account_id"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/account_number_text_input"
        app:layout_constraintStart_toStartOf="@+id/account_number_text_input" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/specified_in_receipt"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/account_number_text_input"
        app:layout_constraintEnd_toEndOf="@+id/account_number_text_input" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/host_second_name"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/host_name_text_input"
        app:layout_constraintStart_toStartOf="@+id/host_name_text_input" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/email_hint"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/email_text_input_registration"
        app:layout_constraintStart_toStartOf="@+id/email_text_input_registration" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/future_login"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/email_text_input_registration"
        app:layout_constraintEnd_toEndOf="@+id/email_text_input_registration" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_input_registration" />
</androidx.constraintlayout.widget.ConstraintLayout>