<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="133dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_main_logo"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_text_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_rounded_background_text_input"
        android:drawableRight="@drawable/ic_next"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/password_text_input"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_rounded_background_text_input"
        android:drawableRight="@drawable/ic_next"
        android:ems="10"
        android:hint="Пароль"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_input" />

    <Button
        android:id="@+id/pay_by_qr_btn"

        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_border_for_button"
        android:isScrollContainer="false"
        android:text="@string/pay_by_qr"
        android:textAllCaps="false"
        android:textColor="@color/custom_blue"
        android:textSize="18sp"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:drawableStart="@drawable/ic_qr_icon"
        app:iconPadding="7dp"
        app:layout_constraintBottom_toTopOf="@+id/telegram_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/telegram_btn"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ic_border_for_button"
        android:text="@string/telegram_bot"
        android:textAllCaps="false"
        android:textColor="@color/custom_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/forget_pass_btn"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:gravity="bottom"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        android:textColor="@color/custom_blue"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="343dp"
        android:layout_height="18dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/dont_have_account"
            android:textSize="13sp" />

        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="bottom"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/custom_blue"
            android:textSize="13sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/email_text_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/pay_by_qr_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view3"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="или" />

        <View
            android:id="@+id/view4"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>